start of a central changelog :D#

--- a/resources.cfg
+++ b/resources.cfg
@@ -1,77 +1,77 @@
 [General]
-FileSystem=./resources/models/
-FileSystem=./resources/models/mine
-FileSystem=./resources/models/veg
-FileSystem=./resources/materials/scripts
-FileSystem=./resources/materials/programs
-FileSystem=./resources/materials/textures
+FileSystem=/usr/local/share/games/sumwars/resources/models/
+FileSystem=/usr/local/share/games/sumwars/resources/models/mine
+FileSystem=/usr/local/share/games/sumwars/resources/models/veg
+FileSystem=/usr/local/share/games/sumwars/resources/materials/scripts
+FileSystem=/usr/local/share/games/sumwars/resources/materials/programs
+FileSystem=/usr/local/share/games/sumwars/resources/materials/textures
 
 [Particles]
-FileSystem=./resources/particle/ogre_1_6
+FileSystem=/usr/local/share/games/sumwars/resources/particle/ogre_1_6
 
 [GUI]
-FileSystem=./resources/gui/configs
-FileSystem=./resources/gui/fonts
-FileSystem=./resources/gui/imagesets
-FileSystem=./resources/gui/layouts
-FileSystem=./resources/gui/looknfeel
-FileSystem=./resources/gui/schemes
-FileSystem=./resources/gui/animations
+FileSystem=/usr/local/share/games/sumwars/resources/gui/configs
+FileSystem=/usr/local/share/games/sumwars/resources/gui/fonts
+FileSystem=/usr/local/share/games/sumwars/resources/gui/imagesets
+FileSystem=/usr/local/share/games/sumwars/resources/gui/layouts
+FileSystem=/usr/local/share/games/sumwars/resources/gui/looknfeel
+FileSystem=/usr/local/share/games/sumwars/resources/gui/schemes
+FileSystem=/usr/local/share/games/sumwars/resources/gui/animations
 
 [emotionsets]
-FileSystem=./resources/emotionsets
+FileSystem=/usr/local/share/games/sumwars/resources/emotionsets
 
 
 [itempictures]
-FileSystem=./resources/itempictures
+FileSystem=/usr/local/share/games/sumwars/resources/itempictures
 
 [sound]
-FileSystem=./resources/sound
+FileSystem=/usr/local/share/games/sumwars/resources/sound
 
 [music]
-FileSystem=./resources/music
+FileSystem=/usr/local/share/games/sumwars/resources/music
 
 [world]
-FileSystem=./data/world
+FileSystem=/usr/local/share/games/sumwars/data/world
 
 [npc]
-FileSystem=./data/npc
+FileSystem=/usr/local/share/games/sumwars/data/npc
 
 [quests]
-FileSystem=./data/quests
+FileSystem=/usr/local/share/games/sumwars/data/quests
 
 [items]
-FileSystem=./data/items
+FileSystem=/usr/local/share/games/sumwars/data/items
 
 [abilities]
-FileSystem=./data/abilities
+FileSystem=/usr/local/share/games/sumwars/data/abilities
 
 [monsters]
-FileSystem=./data/monsters
+FileSystem=/usr/local/share/games/sumwars/data/monsters
 
 [playerclasses]
-FileSystem=./data/playerclasses
+FileSystem=/usr/local/share/games/sumwars/data/playerclasses
 
 [projectiles]
-FileSystem=./data/projectiles
+FileSystem=/usr/local/share/games/sumwars/data/projectiles
 
 [objects]
-FileSystem=./data/objects
+FileSystem=/usr/local/share/games/sumwars/data/objects
 
 [object_groups]
-FileSystem=./data/object_groups
+FileSystem=/usr/local/share/games/sumwars/data/object_groups
 
 [obj_templates]
-FileSystem=./data/obj_templates
+FileSystem=/usr/local/share/games/sumwars/data/obj_templates
 
 [renderinfo]
-FileSystem=./data/renderinfo
+FileSystem=/usr/local/share/games/sumwars/data/renderinfo
 
 [lua]
-FileSystem=./data/lua
+FileSystem=/usr/local/share/games/sumwars/data/lua
 
 [sounddata]
-FileSystem=./data/sound
+FileSystem=/usr/local/share/games/sumwars/data/sound
 
 [translation]
-FileSystem=./translation
+FileSystem=/usr/local/share/games/sumwars/translation
