Use FindOGRE's OGRE_PLUGIN_DIR_REL/DBG as PluginFolder instead of a hardcoded path
NB: This might break for some people! Specify OGRE_PLUGIN_DIR_REL/DBG manually
    in cmake-gui in these cases (check Advanced to see these options)
NB: Could possibly be used even for the Windows section (relative paths work too)

--- a/src/gui/config.h.in
+++ b/src/gui/config.h.in
@@ -5,4 +5,13 @@
 
 #define CFG_FILES_DIR "@CFG_FILES_DIR@"
 
+// If the following macro definitions turn out to be "NOTFOUND", the FindOGRE.cmake
+// has failed to locate the appropriate paths. In that case, please supply them
+// manually via cmake -D or cmake-gui
+#ifdef _DEBUG
+#   define SUMWARS_OGRE_PLUGIN_DIR "@OGRE_PLUGIN_DIR_DBG@"
+#else
+#   define SUMWARS_OGRE_PLUGIN_DIR "@OGRE_PLUGIN_DIR_REL@"
+#endif
+
 #endif
