--- a/src/gui/config.h.in
+++ b/src/gui/config.h.in
@@ -3,7 +3,8 @@
 
 // Generated file, do not edit!  Make changes to config.h.in instead.
 
-#define CFG_FILES_DIR "@CFG_FILES_DIR@"
+#define SUMWARS_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@"
+#define SUMWARS_RESOURCES_DIR "@SUMWARS_RESOURCES_DIR@"
 
 // If the following macro definitions turn out to be "NOTFOUND", the FindOGRE.cmake
 // has failed to locate the appropriate paths. In that case, please supply them
