Prefixed cmake's NO_TINYXML

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,17 +18,17 @@ IF(UPDATE_SUBVERSION_REVISION)
 
 ENDIF(UPDATE_SUBVERSION_REVISION)
 
-SET(${PROJECT_NAME}_VERSION_MAJOR "0")
-SET(${PROJECT_NAME}_VERSION_MINOR "5")
-SET(${PROJECT_NAME}_VERSION_PATCH "5")
-SET(${PROJECT_NAME}_VERSION_REVISION ${Project_WC_REVISION})
-SET(${PROJECT_NAME}_RELEASED_VERSION "${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH}")
-SET(${PROJECT_NAME}_VERSION "${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH}.${${PROJECT_NAME}_VERSION_REVISION}")
-MESSAGE("${PROJECT_NAME}_VERSION: " ${${PROJECT_NAME}_VERSION})
+SET(SUMWARS_VERSION_MAJOR "0")
+SET(SUMWARS_VERSION_MINOR "5")
+SET(SUMWARS_VERSION_PATCH "5")
+SET(SUMWARS_VERSION_REVISION ${Project_WC_REVISION})
+SET(SUMWARS_RELEASED_VERSION "${SUMWARS_VERSION_MAJOR}.${SUMWARS_VERSION_MINOR}.${SUMWARS_VERSION_PATCH}")
+SET(SUMWARS_VERSION "${SUMWARS_VERSION_MAJOR}.${SUMWARS_VERSION_MINOR}.${SUMWARS_VERSION_PATCH}.${SUMWARS_VERSION_REVISION}")
+MESSAGE("SUMWARS_VERSION: " ${SUMWARS_VERSION})
 
 CONFIGURE_FILE("${PROJECT_SOURCE_DIR}/src/gui/version.h.in" "${PROJECT_SOURCE_DIR}/src/gui/version.h")
 
-OPTION(NO_TINYXML "Do not use in-source TinyXML Lib" OFF)
+OPTION(SUMWARS_NO_TINYXML "Do not use bundled, in-source TinyXML Lib" OFF)
 OPTION(NO_ENET "Do not use in-source ENET Lib" OFF)
 OPTION(BUILD_TOOLS "Builds editor tools" ON)
 OPTION(UPDATE_SUBVERSION_REVISION "Option to turn off automatic revision checking" ON)
@@ -51,7 +51,7 @@ endif()
 SET(SUMWARS_SHARE_DIR "${SUMWARS_SHARE_DEFAULT_DIR}" CACHE STRING "Path that represents the directory with sumwars data, CMAKE_INSTALL_PREFIX gets prepended!")
 
 if(UNIX)
-  set(SUMWARS_DOC_DEFAULT_DIR "share/doc/sumwars-${${PROJECT_NAME}_RELEASED_VERSION}")
+  set(SUMWARS_DOC_DEFAULT_DIR "share/doc/sumwars-${SUMWARS_RELEASED_VERSION}")
 else()
   set(SUMWARS_DOC_DEFAULT_DIR "doc")
 endif()
@@ -107,7 +107,7 @@ FIND_PACKAGE(PhysFS REQUIRED)
 IF(BUILD_TOOLS)
   FIND_PACKAGE(POCO REQUIRED)
 ENDIF()
-IF(NO_TINYXML)
+IF(SUMWARS_NO_TINYXML)
   FIND_PACKAGE(TinyXML REQUIRED)
 ENDIF()
 IF(NO_ENET)
@@ -134,7 +134,7 @@ INCLUDE_DIRECTORIES(${ALUT_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${OGG_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${PHYSFS_INCLUDE_DIR})
-IF(NO_TINYXML)
+IF(SUMWARS_NO_TINYXML)
   INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
 ELSE()
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/tinyxml)
@@ -257,7 +257,7 @@ SET(HEADER_FILES
   ./src/gui/clipboard.h
 )
 
-IF(NO_TINYXML)
+IF(SUMWARS_NO_TINYXML)
   SET(SRCS_TINYXML "")
 ELSE()
   SET(SRCS_TINYXML
@@ -453,7 +453,7 @@ SET(LINK_LIBS
   ${VORBIS_LIBRARIES} 
   ${PHYSFS_LIBRARY}
   )
-IF(NO_TINYXML)
+IF(SUMWARS_NO_TINYXML)
   SET(LINK_LIBS ${LINK_LIBS} ${TINYXML_LIBRARIES})
 ENDIF()
 IF(NO_ENET)
