--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ MESSAGE("SUMWARS_VERSION: " ${SUMWARS_VERSION})
 CONFIGURE_FILE("${PROJECT_SOURCE_DIR}/src/gui/version.h.in" "${PROJECT_SOURCE_DIR}/src/gui/version.h")
 
 OPTION(SUMWARS_NO_TINYXML "Do not use bundled, in-source TinyXML Lib" OFF)
-OPTION(NO_ENET "Do not use in-source ENET Lib" OFF)
+OPTION(SUMWARS_NO_ENET "Do not use bundled, in-source ENET Lib" OFF)
 OPTION(BUILD_TOOLS "Builds editor tools" ON)
 OPTION(UPDATE_SUBVERSION_REVISION "Option to turn off automatic revision checking" ON)
 OPTION(POST_BUILD_COPY "After a build, copy the executable to the project folder (Win32)" OFF)
@@ -110,7 +110,7 @@ ENDIF()
 IF(SUMWARS_NO_TINYXML)
   FIND_PACKAGE(TinyXML REQUIRED)
 ENDIF()
-IF(NO_ENET)
+IF(SUMWARS_NO_ENET)
   FIND_PACKAGE(Enet REQUIRED)
 ENDIF()
 
@@ -139,7 +139,7 @@ IF(SUMWARS_NO_TINYXML)
 ELSE()
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/tinyxml)
 ENDIF()
-IF(NO_ENET)
+IF(SUMWARS_NO_ENET)
   INCLUDE_DIRECTORIES(${ENET_INCLUDE_DIR})
 ELSE()
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/enet/include)
@@ -267,7 +267,7 @@ ELSE()
     ./src/tinyxml/tinyxmlparser.cpp)
 ENDIF()
 
-IF(NO_ENET)
+IF(SUMWARS_NO_ENET)
   SET(SRCS_ENET "")
 ELSE()
   SET(SRCS_ENET
@@ -456,7 +456,7 @@ SET(LINK_LIBS
 IF(SUMWARS_NO_TINYXML)
   SET(LINK_LIBS ${LINK_LIBS} ${TINYXML_LIBRARIES})
 ENDIF()
-IF(NO_ENET)
+IF(SUMWARS_NO_ENET)
   SET(LINK_LIBS ${LINK_LIBS} ${Enet_LIBRARY})
 ENDIF()
 IF(BUILD_TOOLS)
