--- a/packaging/debian/rules
+++ b/packaging/debian/rules
@@ -9,8 +9,8 @@
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		-DCMAKE_BUILD_TYPE:STRING="Release" \
-		-DNO_TINYXML:BOOL=ON \
-		-DNO_ENET:BOOL=ON \
+		-DSUMWARS_NO_TINYXML:BOOL=ON \
+		-DSUMWARS_NO_ENET:BOOL=ON \
 		-DBUILD_TOOLS:BOOL=OFF
 
 override_dh_auto_install:
