updated path for the used icon file; this should only affect the windows build.

--- a/src/winicon/Sumwars.rc
+++ b/src/winicon/Sumwars.rc
@@ -19,7 +19,7 @@
 
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
-IDI_SUMWARS_APP_ICON        ICON                    "..\\..\\resources\\icon\\SumWars.ico"
+IDI_SUMWARS_APP_ICON        ICON                    "..\\..\\share\\icon\\SumWars.ico"
 
 
 // -------------------------------
