Prefixed cmake's BUILD_TOOLS, only install freedesktop files on UNIX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ CONFIGURE_FILE("${PROJECT_SOURCE_DIR}/src/gui/version.h.in" "${PROJECT_SOURCE_DI
 
 OPTION(SUMWARS_NO_TINYXML "Do not use bundled, in-source TinyXML Lib" OFF)
 OPTION(SUMWARS_NO_ENET "Do not use bundled, in-source ENET Lib" OFF)
-OPTION(BUILD_TOOLS "Builds editor tools" ON)
+OPTION(SUMWARS_BUILD_TOOLS "Builds editor tools (not needed for gameplay, only useful for content authors)" ON)
 OPTION(UPDATE_SUBVERSION_REVISION "Option to turn off automatic revision checking" ON)
 OPTION(POST_BUILD_COPY "After a build, copy the executable to the project folder (Win32)" OFF)
 
@@ -104,7 +104,7 @@ FIND_PACKAGE(ALUT REQUIRED)
 FIND_PACKAGE(Ogg REQUIRED)
 FIND_PACKAGE(Vorbis REQUIRED)
 FIND_PACKAGE(PhysFS REQUIRED)
-IF(BUILD_TOOLS)
+IF(SUMWARS_BUILD_TOOLS)
   FIND_PACKAGE(POCO REQUIRED)
 ENDIF()
 IF(SUMWARS_NO_TINYXML)
@@ -144,7 +144,7 @@ IF(SUMWARS_NO_ENET)
 ELSE()
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/enet/include)
 ENDIF()
-IF(BUILD_TOOLS)
+IF(SUMWARS_BUILD_TOOLS)
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gui/debugpanel)
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gui/debugpanel/filebrowser)
   INCLUDE_DIRECTORIES(${POCO_INCLUDE_DIR})
@@ -380,7 +380,7 @@ SET(SRCS
   ./src/gui/clipboard.cpp
 )
  
-IF(BUILD_TOOLS)
+IF(SUMWARS_BUILD_TOOLS)
   SET(HEADER_FILES
     ${HEADER_FILES}
     ./src/gui/debugpanel/benchmarktab.h
@@ -459,12 +459,12 @@ ENDIF()
 IF(SUMWARS_NO_ENET)
   SET(LINK_LIBS ${LINK_LIBS} ${Enet_LIBRARY})
 ENDIF()
-IF(BUILD_TOOLS)
+IF(SUMWARS_BUILD_TOOLS)
   SET(LINK_LIBS
     ${LINK_LIBS}
     ${POCO_LIBRARIES}
     )
-  ADD_DEFINITIONS(-DBUILD_TOOLS)
+  ADD_DEFINITIONS(-DSUMWARS_BUILD_TOOLS)
 ENDIF()
 IF(WIN32)
   SET(LINK_LIBS
@@ -490,26 +490,32 @@ ENDIF(POST_BUILD_COPY)
 install(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/sumwars"
   DESTINATION "${SUMWARS_EXECUTABLE_DIR}")
 
-install(FILES "packaging/sumwars.desktop"
-  DESTINATION "share/applications")
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_16x16.png"
-  DESTINATION "share/icons/hicolor/16x16/"
-  RENAME "sumwars.png")
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_24x24.png"
-  DESTINATION "share/icons/hicolor/24x24/"
-  RENAME "sumwars.png")
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_32x32.png"
-  DESTINATION "share/icons/hicolor/32x32/"
-  RENAME "sumwars.png")
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_48x48.png"
-  DESTINATION "share/icons/hicolor/48x48/"
-  RENAME "sumwars.png")
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_64x64.png"
-  DESTINATION "share/icons/hicolor/64x64/"
-  RENAME "sumwars.png")
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_128x128.png"
-  DESTINATION "share/icons/hicolor/128x128/"
-  RENAME "sumwars.png")
+# freedesktop.org icons and desktop files
+# TODO: How do we do this on Windows? Installing start menu items.
+if (UNIX)
+  install(FILES "packaging/sumwars.desktop"
+    DESTINATION "share/applications")
+    
+  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_16x16.png"
+    DESTINATION "share/icons/hicolor/16x16/"
+    RENAME "sumwars.png")
+  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_24x24.png"
+    DESTINATION "share/icons/hicolor/24x24/"
+    RENAME "sumwars.png")
+  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_32x32.png"
+    DESTINATION "share/icons/hicolor/32x32/"
+    RENAME "sumwars.png")
+  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_48x48.png"
+    DESTINATION "share/icons/hicolor/48x48/"
+    RENAME "sumwars.png")
+  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_64x64.png"
+    DESTINATION "share/icons/hicolor/64x64/"
+    RENAME "sumwars.png")
+  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/share/icon/SumWarsIcon_128x128.png"
+    DESTINATION "share/icons/hicolor/128x128/"
+    RENAME "sumwars.png")
+endif()
+
 install(FILES "AUTHORS" "COPYING" "INSTALL" "README"
   DESTINATION "${SUMWARS_DOC_DIR}")
   
