--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 2.6)
 project(SUMWARS)
 
+MESSAGE(STATUS "### Welcome to Summoning Wars build system ###")
+MESSAGE(STATUS "**********************************************")
+MESSAGE(STATUS "  http://sumwars.org/wiki/Build_instructions  ")
+MESSAGE(STATUS "")
+
 OPTION(SUMWARS_NO_TINYXML "Do not use bundled, in-source TinyXML Lib" OFF)
 OPTION(SUMWARS_NO_ENET "Do not use bundled, in-source ENET Lib" OFF)
 OPTION(SUMWARS_BUILD_TOOLS "Builds editor tools (not needed for gameplay, only useful for content authors)" ON)
@@ -24,11 +29,12 @@ SET(SUMWARS_VERSION_MAJOR "0")
 SET(SUMWARS_VERSION_MINOR "5")
 SET(SUMWARS_VERSION_PATCH "5")
 SET(SUMWARS_VERSION_REVISION ${Project_WC_REVISION})
-SET(SUMWARS_RELEASED_VERSION "${SUMWARS_VERSION_MAJOR}.${SUMWARS_VERSION_MINOR}.${SUMWARS_VERSION_PATCH}")
-SET(SUMWARS_VERSION "${SUMWARS_VERSION_MAJOR}.${SUMWARS_VERSION_MINOR}.${SUMWARS_VERSION_PATCH}.${SUMWARS_VERSION_REVISION}")
-MESSAGE("SUMWARS_VERSION: " ${SUMWARS_VERSION})
-
+SET(SUMWARS_SHORT_VERSION "${SUMWARS_VERSION_MAJOR}.${SUMWARS_VERSION_MINOR}.${SUMWARS_VERSION_PATCH}")
+SET(SUMWARS_VERSION "${SUMWARS_SHORT_VERSION}.hg-${SUMWARS_VERSION_REVISION}")
 CONFIGURE_FILE("${PROJECT_SOURCE_DIR}/src/gui/version.h.in" "${PROJECT_SOURCE_DIR}/src/gui/version.h")
+
+MESSAGE(STATUS "Version: ${SUMWARS_VERSION}")
+MESSAGE(STATUS "Short Version: ${SUMWARS_SHORT_VERSION}")
 
 if(UNIX)
   set(SUMWARS_EXECUTABLE_DEFAULT_DIR "bin")
@@ -47,7 +53,7 @@ endif()
 SET(SUMWARS_SHARE_DIR "${SUMWARS_SHARE_DEFAULT_DIR}" CACHE STRING "Path that represents the directory with sumwars data, CMAKE_INSTALL_PREFIX gets prepended!")
 
 if(UNIX)
-  set(SUMWARS_DOC_DEFAULT_DIR "share/doc/sumwars-${SUMWARS_RELEASED_VERSION}")
+  set(SUMWARS_DOC_DEFAULT_DIR "share/doc/sumwars-${SUMWARS_SHORT_VERSION}")
 else()
   set(SUMWARS_DOC_DEFAULT_DIR "doc")
 endif()
@@ -57,7 +63,9 @@ SET(SUMWARS_DOC_DIR "${SUMWARS_DOC_DEFAULT_DIR}" CACHE STRING "Path that represe
 IF( NOT CMAKE_BUILD_TYPE )
   SET( CMAKE_BUILD_TYPE "RelWithDebInfo" )
 ENDIF()
-MESSAGE("CMAKE_BUILD_TYPE: " ${CMAKE_BUILD_TYPE})
+MESSAGE(STATUS "Build type: " ${CMAKE_BUILD_TYPE})
+# separating newline before configuration really happens
+MESSAGE(STATUS "")
 
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules/;${CMAKE_MODULE_PATH}")
 
@@ -144,8 +152,8 @@ IF(SUMWARS_BUILD_TOOLS)
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gui/debugpanel)
   INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gui/debugpanel/filebrowser)
   INCLUDE_DIRECTORIES(${POCO_INCLUDE_DIR})
-  MESSAGE("Activated ingame build tools.")
 ENDIF()
+
 IF(!WIN32)
   INCLUDE_DIRECTORIES(${PTHREADS_INCLUDE_DIR})
 ENDIF()
